# libtnc

./: Makefile  README.md  libtnc.spec
src/: AUTHORS  COPYING  ChangeLog  INSTALL.windows  Makefile.am  Makefile.global  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  libtnc.spec  libtnc.spec.in  libtncconfig.h
src/src/: Makefile.am  Makefile.in
src/src/libtnc/: Makefile.am  Makefile.in  base64.c  base64.h  libtnc.h  libtnc_log.c  libtncarray.c  libtncarray.h  libtncdebug.h  libtnchash.c  libtnchash.h  libtncimc.c  libtncimc.h  libtncimv.c  libtncimv.h  libtnctncc.c  libtnctncc.h  libtnctncs.c  libtnctncs.h  libtncxml.c  libtncxml.h  mutex.c  mutex.h  test_dynamic.c  test_static.c  test_tnc_config  test_tnc_config.cygwin  test_tnc_config.darwin  test_tnccs.c  tncc_bind.c  tncc_receive.c  tncifimc.h  tncifimv.h  tncs_attributes.c  tncs_bind.c  tncs_receive.c
src/src/osc/: Makefile.am  Makefile.in  osc.h  osc_imc.c  osc_imc.h  osc_imv.c  osc_imv.h  policy.c  policy.h  policy.y  policy_lexer.c  policy_lexer.l  policy_tree.c  policy_tree.h  test_osc.c  test_tnc_config  test_tnc_config.cygwin  test_tnc_config.darwin
src/src/sample/: Makefile.am  Makefile.in  sample_imc.c  sample_imv.c
src/vs2005/libtnc/: libtnc.sln  libtnc.vcproj
src/vs2005/osc_imc/: osc_imc.vcproj
src/vs2005/osc_imv/: osc_imv.vcproj
src/vs2005/sample_imc/: sample_imc.vcproj
src/vs2005/sample_imv/: sample_imv.vcproj
src/vs2005/test_dynamic/: test_dynamic.vcproj
src/vs2005/test_static/: test_static.vcproj
