ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = configure libtnc.spec libtnc.spec.in Makefile.global \
	Interface-TNC/Interface-TNC-1.0.tar.gz \
	libtncconfig.h \
	INSTALL.windows \
	vs2005/test_dynamic/test_dynamic.vcproj \
	vs2005/osc_imc/osc_imc.vcproj \
	vs2005/osc_imv/osc_imv.vcproj \
	vs2005/sample_imc/sample_imc.vcproj \
	vs2005/sample_imv/sample_imv.vcproj \
	vs2005/libtnc/libtnc.sln \
	vs2005/libtnc/libtnc.suo \
	vs2005/libtnc/libtnc.vcproj \
	vs2005/test_static/test_static.vcproj \
	doc/libtnc.pdf
SUBDIRS = src
CLEANFILES = *~
include $(top_srcdir)/Makefile.global
