dnl -*-autoconf-*-

dnl libtnc: Autoconf script
dnl 
dnl $Id: configure.in,v 1.12 2009/08/12 09:43:22 mikem Exp mikem $

dnl (C) 2006 Open System Consultants Pty Ltd
dnl     Mike McCauley (mikem@open.com.au)
dnl      - Initial packaging

AC_INIT
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libtnc, 1.25)
AM_WITH_DMALLOC
AC_PROG_CC
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
# Need to figure out if we have funny nmaing conventions for 
# shared libraries
case $host_os in
     cygwin*)
       AC_DEFINE(HOST_IS_CYGWIN,1,[Define if building under Cygwin])
       ;;
     darwin* | rhapsody*)
       AC_DEFINE(HOST_IS_DARWIN,1,[Define if building under Darwin on Mac OS X])
       ;;
esac
AC_ARG_ENABLE(libtncdebug, [  --enable-libtncdebug     enable internal debug messages],
                            [ AC_DEFINE([LIBTNCDEBUG], [], [enable internal debug messages]) ],)

ACX_PTHREAD(AC_DEFINE(HAVE_PTHREAD,1, [Have pthread]))
AC_SUBST(lt_cv_dlopen_libs)
AC_OUTPUT(libtnc.spec \
          Makefile \
          src/Makefile \
	  src/sample/Makefile \
	  src/libtnc/Makefile \
	  src/osc/Makefile)

