#lib_LIBRARIES = libsample_imc.a libsample_imv.a
lib_LTLIBRARIES = libsample_imc.la libsample_imv.la
#libsample_imc_a_SOURCES = sample_imc.c
libsample_imc_la_SOURCES = sample_imc.c
#libsample_imv_a_SOURCES = sample_imv.c
libsample_imv_la_SOURCES = sample_imv.c
INCLUDES = -I$(top_srcdir)/src/libtnc
CLEANFILES = *~
AM_LDFLAGS = -no-undefined
include $(top_srcdir)/Makefile.global
